--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <packaging>jar</packaging>
 
     <name>blog</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Personal blog project for Spring Boot MVC</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
